update table format

--- a/_posts/2021-07-30-apply.md
+++ b/_posts/2021-07-30-apply.md
@@ -21,15 +21,15 @@ Or if the kick-off meeting already happened, you can stop by one of our team or 
 
 Our regular meeting times are:
 
-|  Team  |   Day  |  Time  |Location|
-|--------|--------|--------|--------|
-|Full Team|TBD|
-|Aerodyanmics|TBD|
-|Structures|TBD|
-|Manufacturing|TBD|
-|Graphics|TBD|
-|Propulsion|TBD|
-|Systems|TBD|
+|  Team  |   Day  |  Time  |  Location  |
+|  ----  | :----: | :----: |   :----:   |
+|  Full Team  |  TBD  |  |  |
+|  Aerodyanmics  |  TBD  |  |  |
+|  Structures  |  TBD  |  |  |
+|  Manufacturing  |  TBD  |  |  |
+|  Graphics  |  TBD  |  |  |
+|  Propulsion  |  TBD  |  |  |
+|  Systems  |  TBD  |  |  |
 
 **NOTE:** If you're seeing this for the first time way in October or later, you're going to want to reach out to one of the [team leads](#), since regular meetings times have likely been changed (or abandoned in favor of more efficient communication).
 <!-- TODO: update this link to go to team lead contact info -->
