--- a/_posts/2021-07-30-apply.md
+++ b/_posts/2021-07-30-apply.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "How to Apply: a step-by-step guide on how to apply to the DBF Team"
+title: "How to Apply: a guide on how to apply to the DBF Team"
 author: "Judd Mehr"
 ---
 
