try a different format

--- a/_posts/2021-07-30-apply.md
+++ b/_posts/2021-07-30-apply.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "How to Apply: a guide on how to apply to the DBF Team"
+title: "How to Apply"
+description: "a guide on how to apply to the DBF Team"
 author: "Judd Mehr"
 ---
 
