clean out posts

--- a/_posts/2021-07-30-apply.md
+++ b/_posts/2021-07-30-apply.md
@@ -46,7 +46,7 @@ After you've filled out the survey, someone on the team should reach out to you 
 
 **NOTE:** At the very beginning of the semester, we may not actually have put all the team leads in place.  You may consider applying to be a team lead (which you should indicate in the additional information box in the survey).  Being a team lead is a great opportunity to build leadership skills and enhance your resume.  A team lead position, however, comes with extra responsibility to ensure that deliverables are on time and of sufficient quality.
 
-### 4) Get to work.
+### 4) Get to work
 
 Once you've joined a sub-team, you'll probably be given things to work on right away.  Sometimes you'll be give very specific instructions on what to do, but most of the time your tasks are very open ended.  You're going to have to put in some initiative to learn things on your own, and reach out to more experienced team members for help and suggestions when you need it.
 
