--- a/_posts/0000-00-00-apply.md
+++ b/_posts/0000-00-00-apply.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "How to Apply"
-description: "a guide on how to apply to the DBF Team"
+description: "A guide on how to apply to the DBF Team"
 author: "Judd Mehr"
 ---
 
