--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -6,7 +6,7 @@ author: "Judd Mehr"
 ---
 
 ## More Info
-If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at **6 PM** on [**Wednesday, September 1st**](#) AND [**Tuesday, September 7th**](#) in room **### EB**
+If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at [**5 PM** on **Tuesday, September 7th** in room **EB 112**](#)
 
 Or if the kick-off meeting already happened, you can stop by one of our team or sub-team meetings.  We try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.
 
