--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -5,6 +5,8 @@ description: "A guide on how to apply to the DBF Team"
 author: "Judd Mehr"
 ---
 
+{:toc}
+
 ## More Info
 If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at [**5 PM** on **Tuesday, September 7th** in room **EB 112**](https://aeronautics.byu.edu/DBF/download/kickoff.ics)
 
