change calendar link to google calendar and remove TOC

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -5,11 +5,11 @@ description: "A guide on how to apply to the DBF Team"
 author: "Judd Mehr"
 ---
 
-* TOC
-{:toc}
+<!-- * TOC
+{:toc} -->
 
 ## More Info
-If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at [**5 PM** on **Tuesday, September 7th** in room **EB 112**](https://aeronautics.byu.edu/DBF/download/kickoff.ics)
+If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at [**5 PM** on **Tuesday, September 7th** in room **EB 112**]("https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210907T230000Z%2F20210908T000000Z&details=Kickoff%20Meeting%20for%20the%20BYU%20AIAA%20Design%20Build%20Fly%20Team.%20We%27ll%20talk%20about%20the%20team%20for%20new%20people%2C%20and%20start%20getting%20ourselves%20oriented%20and%20organized%20and%20ready%20for%20AIAA%20to%20release%20the%20rules%20for%20this%20year.&location=EB%20112%20%28Airplane%20Lab%29&text=BYU%20Design%20Build%20Fly%20Team%20Kickoff" title="Save Event in my Calendar")
 
 Or if the kick-off meeting already happened, you can stop by one of our team or sub-team meetings.  We try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.
 
