make all external links a new tab

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -33,11 +33,11 @@ Our regular meeting times are:
 
 ### 1) Take the survey
 
-If you'd like to apply, you need to start by taking [this survey](https://forms.gle/cVSoxY7EwWDKEFbEA), which will ask for some basic info (name and email, etc.) as well as have you self-report on your skill level in some of the major areas of focus for our team.
+If you'd like to apply, you need to start by taking [this survey](https://forms.gle/cVSoxY7EwWDKEFbEA){:target="_blank"}, which will ask for some basic info (name and email, etc.) as well as have you self-report on your skill level in some of the major areas of focus for our team.
 
 ### 2) Sign the contract
 
-The DBF team is a volunteer-based team.  There is currently no way to recieve class credit or any other compensation for working with the team (other than gaining skills, experience, socializing/networking, resume building, etc.)  Because of the volunteer nature of the team, we have found it necessary to incorporate some sort of formal commitment to participation.  Currently, this takes the form of a contract, which you can [download here](https://aeronautics.byu.edu/DBF/download/contract.pdf).
+The DBF team is a volunteer-based team.  There is currently no way to recieve class credit or any other compensation for working with the team (other than gaining skills, experience, socializing/networking, resume building, etc.)  Because of the volunteer nature of the team, we have found it necessary to incorporate some sort of formal commitment to participation.  Currently, this takes the form of a contract, which you can [download here](https://aeronautics.byu.edu/DBF/download/contract.pdf){:target="_blank"}.
 
 As part of the application process, you will have to print out, and physically fill in the details of this contract, sign and date it, and find two witnesses to sign and date it as well.  You will then present this to the Project Manager on the team who will keep it on file for the semester.  Every team member is required to go through this process at the beginning of each semeseter, or when they begin participating on the team.
 
