link to leadership application survey

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -47,7 +47,7 @@ You should also plan on tracking the time you spend working on team related proj
 
 After you've filled out the survey, someone on the team should reach out to you within a few days and point you in the direction of some of the team leads you may want to work with based on your skills and interests.  The team lead will be able to add you to the team Slack group, CAEDM group folder, and any other things you may need access to.
 
-**NOTE:** At the very beginning of the semester, we may not actually have put all the team leads in place.  You may consider applying to be a team lead (which you should indicate in the additional information box in the survey).  Being a team lead is a great opportunity to build leadership skills and enhance your resume.  A team lead position, however, comes with extra responsibility to ensure that deliverables are on time and of sufficient quality.
+**NOTE:** At the very beginning of the semester, we may not actually have put all the team leads in place.  You may consider [applying to be a team lead](https://docs.google.com/forms/d/e/1FAIpQLSc0cE_4amVgGRv2KjmNXUjZarg9vnCL3PmqUnznchvYLO9iqA/viewform?usp=sf_link).  Being a team lead is a great opportunity to build leadership skills and enhance your resume.  A team lead position, however, comes with extra responsibility to ensure that deliverables are on time and of sufficient quality.
 
 ### 4) Get to work
 
