--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -35,21 +35,21 @@ Our regular meeting times are:
 
 If you'd like to apply, you need to start by taking [this survey](https://forms.gle/cVSoxY7EwWDKEFbEA){:target="_blank"}, which will ask for some basic info (name and email, etc.) as well as have you self-report on your skill level in some of the major areas of focus for our team.
 
-### 2) Sign the contract
+<!-- ### 2) Sign the contract
 
 The DBF team is a volunteer-based team.  There is currently no way to recieve class credit or any other compensation for working with the team (other than gaining skills, experience, socializing/networking, resume building, etc.)  Because of the volunteer nature of the team, we have found it necessary to incorporate some sort of formal commitment to participation.  Currently, this takes the form of a contract, which you can [download here](https://aeronautics.byu.edu/DBF/download/contract.pdf){:target="_blank"}.
 
 As part of the application process, you will have to print out, and physically fill in the details of this contract, sign and date it, and find two witnesses to sign and date it as well.  You will then present this to the Project Manager on the team who will keep it on file for the semester.  Every team member is required to go through this process at the beginning of each semeseter, or when they begin participating on the team.
 
-You should also plan on tracking the time you spend working on team related projects to make sure you are keeping your commitment, as well as for details you can add to your resume/portfolio.
+You should also plan on tracking the time you spend working on team related projects to make sure you are keeping your commitment, as well as for details you can add to your resume/portfolio. -->
 
-### 3) Join a Sub-team
+### 2) Join a Sub-team
 
 After you've filled out the survey, someone on the team should reach out to you within a few days and point you in the direction of some of the team leads you may want to work with based on your skills and interests.  The team lead will be able to add you to the team Slack group, CAEDM group folder, and any other things you may need access to.
 
 **NOTE:** At the very beginning of the semester, we may not actually have put all the team leads in place.  You may consider [applying to be a team lead](https://docs.google.com/forms/d/e/1FAIpQLSc0cE_4amVgGRv2KjmNXUjZarg9vnCL3PmqUnznchvYLO9iqA/viewform?usp=sf_link){:target="_blank"}.  Being a team lead is a great opportunity to build leadership skills and enhance your resume.  A team lead position, however, comes with extra responsibility to ensure that deliverables are on time and of sufficient quality.
 
-### 4) Get to work
+### 3) Get to work
 
 Once you've joined a sub-team, you'll probably be given things to work on right away.  Sometimes you'll be give very specific instructions on what to do, but most of the time your tasks are very open ended.  You're going to have to put in some initiative to learn things on your own, and reach out to more experienced team members for help and suggestions when you need it.
 
