--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -9,15 +9,13 @@ author: "Judd Mehr"
 {:toc} -->
 
 ## More Info
-If you'd just like to learn more about the team, then you should stop by one of our kick-off meetings at the beginning of each semester.  The next one will held at [**6 PM** on **Tuesday, September 7th** in room **EB 112**](https://calendar.google.com/calendar/render?action=TEMPLATE&text=EveKickoff%20Meeting%20for%20the%20BYU%202021%20Design%20Build%20Fly%20Team&dates=20210901T240000Z/20210901T250000Z&details=Describe%20your%20event.We'll%20talk%20about%20the%20team%20for%20new%20people,%20and%20start%20getting%20ourselves%20oriented%20and%20organized%20for%20the%20AIAA%20to%20release%20the%20rules%20for%20this%20year.&location=EB%20112&trp=true){:target="_blank"}
-
-Or if the kick-off meeting already happened, you can stop by one of our team or sub-team meetings.  We try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.
+If you'd just like to learn more about the team, then you should stop by one of our team meetings, Tuesdays at 6pm in EB 112. Note that we try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.
 
 Our regular meeting times are:
 
 |  Team  |   Day  |  Time  |  Location  |
 |  ----  | :----: | :----: |   :----:   |
-|  Full Team  |  TBD  |  |  |
+|  Full Team  | Tuesday | 6pm | EB 112 |
 |  Aerodyanmics  |  TBD  |  |  |
 |  Structures  |  TBD  |  |  |
 |  Manufacturing  |  TBD  |  |  |
@@ -25,7 +23,7 @@ Our regular meeting times are:
 |  Propulsion  |  TBD  |  |  |
 |  Systems  |  TBD  |  |  |
 
-**NOTE:** If you're seeing this for the first time in October or later, you'll want to reach out to one of the [team leads](#), since regular meeting times have likely been changed (or abandoned in favor of more efficient communication).
+**NOTE:** If you're seeing this for the first time in October or later, you'll want to reach out to one of the [team leads](https://aeronautics.byu.edu/DBF/members/), since regular meeting times have likely been changed (or abandoned in favor of more efficient communication).
 <!-- TODO: update this link to go to team lead contact info -->
 
 
