add in aerostructures meeting time

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -13,15 +13,13 @@ If you'd just like to learn more about the team, then you should stop by one of 
 
 Our regular meeting times are:
 
-|  Team  |   Day  |  Time  |  Location  |
-|  ----  | :----: | :----: |   :----:   |
-|  Full Team  | Tuesday | 6pm | EB 112 |
-|  Aerodyanmics  |  TBD  |  |  |
-|  Structures  |  TBD  |  |  |
-|  Manufacturing  |  TBD  |  |  |
-|  Graphics  |  TBD  |  |  |
-|  Propulsion  |  TBD  |  |  |
-|  Systems  |  TBD  |  |  |
+|  Team  |   Day  |  Time  |  Location  |  Regular?  |
+|  ----  | :----: | :----: |   :----:   |   :----:   |
+|  Full Team  | Tuesday | 6pm | EB 112 | No |
+|  Aerostructures  |  Tuesday  | 10AM | EB 112 | Yes |
+|  Graphics/Manufacturing  |  TBD  |  |  |  |
+|  Propulsion/Piloting  |  TBD  |  |  |  |
+|  Payload Systems  |  TBD  |  |  |  |
 
 **NOTE:** If you're seeing this for the first time in October or later, you'll want to reach out to one of the [team leads](https://aeronautics.byu.edu/DBF/members/), since regular meeting times have likely been changed (or abandoned in favor of more efficient communication).
 <!-- TODO: update this link to go to team lead contact info -->
