add graphics meeting time

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -17,7 +17,7 @@ Our regular meeting times are:
 |  ----  | :----: | :----: |   :----:   |   :----:   |
 |  Full Team  | Tuesday | 6pm | EB 112 | No |
 |  Aerostructures  |  Tuesday  | 10AM | EB 112 | Yes |
-|  Graphics/Manufacturing  |  TBD  |  |  |  |
+|  Graphics/Manufacturing  |  Friday  | 3pm | EB 112 | Yes |
 |  Propulsion/Piloting  |  TBD  |  |  |  |
 |  Payload Systems  |  TBD  |  |  |  |
 
