update meeting times

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -9,7 +9,7 @@ author: "Judd Mehr"
 {:toc} -->
 
 ## More Info
-If you'd just like to learn more about the team, then you should stop by one of our team meetings, Tuesdays at 6pm in EB 112. Note that we try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.
+If you'd just like to learn more about the team, then you should stop by one of our team meetings, Tuesdays at 6pm in EB 112. Note that we try to limit the number of meetings we have as the semester progresses, but we usually have regular meetings for the first few weeks.  You should also probably reach out directly to the [team lead](https://aeronautics.byu.edu/DBF/members/) of the subteam you're interested in joining to get more info as fast as possible.
 
 Our regular meeting times are:
 
@@ -19,10 +19,7 @@ Our regular meeting times are:
 |  Aerostructures  |  Tuesday  | 10AM | EB 112 | Yes |
 |  Graphics/Manufacturing  |  Friday  | 3pm | EB 112 | Yes |
 |  Propulsion/Piloting  |  TBD  |  |  |  |
-|  Payload Systems  |  TBD  |  |  |  |
-
-**NOTE:** If you're seeing this for the first time in October or later, you'll want to reach out to one of the [team leads](https://aeronautics.byu.edu/DBF/members/), since regular meeting times have likely been changed (or abandoned in favor of more efficient communication).
-<!-- TODO: update this link to go to team lead contact info -->
+|  Payload Systems  |  Thursday  | 6pm | EB 112 | Yes |
 
 
 ## Application Process:
