add graphics meeting time

--- a/_posts/0001-01-01-apply.md
+++ b/_posts/0001-01-01-apply.md
@@ -18,7 +18,7 @@ Our regular meeting times are:
 |  Full Team  | Tuesday | 6pm | EB 112 | No |
 |  Aerostructures  |  Tuesday  | 10AM | EB 112 | Yes |
 |  Graphics/Manufacturing  |  Friday  | 3pm | EB 112 | Yes |
-|  Propulsion/Piloting  |  TBD  |  |  |  |
+|  Propulsion/Piloting  |  Monday  | 5pm | EB 112 | No |
 |  Payload Systems  |  Thursday  | 6pm | EB 112 | Yes |
 
 
