add team makeup

--- a/_posts/2021-04-01-archive.md
+++ b/_posts/2021-04-01-archive.md
@@ -9,6 +9,10 @@ author: "Judd Mehr"
 
 Overall we placed [45th of 92](../../../../assets/DBF_Final_Scores_2021.pdf) teams that participated in the entirety of the competition.
 
+## Team Makeup
+
+This year we had a total of 7 members, composed of 4 underclassmen, 2 seniors, and 1 graduate student.
+
 ## Competition Rules
 
 For reference, the rules for the competition can be download [here](../../../../assets/dbf-rules-2021.pdf)
@@ -57,3 +61,7 @@ Below are the directly quoted feedback points received from the competition judg
 Our video submission received a score of 7.97 (top score was 9.83), and can be viewed [here](https://www.youtube.com/watch?v=xcirHwr4ngA)
 
 # Takeaways for Next Year
+
+Most of the judges feedback mentioned things that we failed to include in our proposal and design report.  We had ample room in both for more material, but lack of experience lead us to leave out a lot of things the judges were looking for.
+
+In response, we have updated our proposal template with notes about things we should explicitly include next year.  We have also fleshed out our design report template somewhat to help guide us in adding a lot more information than we did this year.
