test html download link

--- a/_posts/2021-04-01-archive2021.md
+++ b/_posts/2021-04-01-archive2021.md
@@ -46,7 +46,7 @@ In master schedule but not referenced (testing)
 
 ## Final Design Report
 
-Our final report can be downloaded [here]().  We received a score of 50.6, the maximum being 93.33.  This placed us at [84th of 93]("{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf").
+Our final report can be downloaded [here]().  We received a score of 50.6, the maximum being 93.33.  This placed us at <a href="{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf" download>84th of 93</a>.
 
 ### Feedback from Judges
 
