--- a/_posts/2021-04-01-archive2021.md
+++ b/_posts/2021-04-01-archive2021.md
@@ -7,7 +7,7 @@ author: "Judd Mehr"
 
 # Overview
 
-Overall we placed [45th of 92]("{{ site.baseurl }}/assets/DBF_Final_Scores_2021.pdf") teams that participated in the entirety of the competition.
+Overall we placed <a href="{{ site.baseurl }}/assets/DBF_Final_Scores_2021.pdf" download>45th of 92</a> teams that participated in the entirety of the competition.
 
 ## Team Makeup
 
@@ -15,11 +15,11 @@ This year we had a total of 7 members, composed of 4 underclassmen, 2 seniors, a
 
 ## Competition Rules
 
-For reference, the rules for the competition can be download [here]("{{ site.baseurl }}/assets/dbf-rules-2021.pdf")
+For reference, the rules for the competition can be download
 
 ## Competition Proposal
 
-Our submitted proposal can be downloaded [here]().  We received an overall score of 68.3 (top score was 92.2), placing us [59th of 115]("{{ site.baseurl }}/assets/2021_DBF_Proposal_Scores.pdf") selected teams.
+Our submitted proposal can be downloaded <a href="{{ site.baseurl }}/assets/" download>here</a>.  We received an overall score of 68.3 (top score was 92.2), placing us <a href="{{ site.baseurl }}/assets/2021_DBF_Proposal_Scores.pdf" download>59th of 115</a> selected teams.
 
 ### Feedback from Judges
 
@@ -46,7 +46,7 @@ In master schedule but not referenced (testing)
 
 ## Final Design Report
 
-Our final report can be downloaded [here]().  We received a score of 50.6, the maximum being 93.33.  This placed us at <a href="{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf" download>84th of 93</a>.
+Our final report can be downloaded <a href="{{ site.baseurl }}/assets/" download>here</a>.  We received a score of 50.6, the maximum being 93.33.  This placed us at <a href="{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf" download>84th of 93</a>.
 
 ### Feedback from Judges
 
