swap from bullets to numbers

--- a/_posts/2021-04-01-archive2021.md
+++ b/_posts/2021-04-01-archive2021.md
@@ -25,24 +25,24 @@ Our submitted proposal can be downloaded <a href="{{ site.baseurl }}/assets/" do
 
 Below are the directly quoted feedback points received from the competition judges on our proposal.
 
-- Decent proposal, but did leave some points on the table through omission of aircraft shipping costs, funding acquisition details, conceptual design of the sensor container and more details on manufacturing plan/schedule/critical processes. Good test planning section!
-- Exec: Good overall, would like to have seen more main points from subsequent sections
-- Man Sum: Meets all requirement except lacking plan for acquiring funding.
-- Concep: Would ilke more discussion of sensitivity aproach - score is linear in all design paramerters - is that reasonable?
-- Good vehicle configuration for this mission, nice job
-- Man: Could use more explicit reference to schedule
-- Test:Good use planned for prototypes and testing
-- Design flowchart, no mfg
-- Minimal/no discussion of critical technologies
-- No reference to mfg plan
+1. Decent proposal, but did leave some points on the table through omission of aircraft shipping costs, funding acquisition details, conceptual design of the sensor container and more details on manufacturing plan/schedule/critical processes. Good test planning section!
+1. Exec: Good overall, would like to have seen more main points from subsequent sections
+1. Man Sum: Meets all requirement except lacking plan for acquiring funding.
+1. Concep: Would ilke more discussion of sensitivity aproach - score is linear in all design paramerters - is that reasonable?
+1. Good vehicle configuration for this mission, nice job
+1. Man: Could use more explicit reference to schedule
+1. Test:Good use planned for prototypes and testing
+1. Design flowchart, no mfg
+1. Minimal/no discussion of critical technologies
+1. No reference to mfg plan
 In master schedule but not referenced (testing)
-- Very minimal discussion of flight test plans
-- No mention of what data to analyze from testing
-- Very good work overall. Please watch your grammar. Reports should not be written using we/they.
-- Conceptual Design lacked decomposition into sub-system requirements. Could have used more description on the sensor sub-system.
-- Manufacturing plan was poor. Did not discuss critical processes or schedule at all.
-- I liked Table 1. Good job.
-- Schedule was good, but could have used linking to show the relationship between elements. Schedule seems realistic, glad you show multiple prototypes.
+1. Very minimal discussion of flight test plans
+1. No mention of what data to analyze from testing
+1. Very good work overall. Please watch your grammar. Reports should not be written using we/they.
+1. Conceptual Design lacked decomposition into sub-system requirements. Could have used more description on the sensor sub-system.
+1. Manufacturing plan was poor. Did not discuss critical processes or schedule at all.
+1. I liked Table 1. Good job.
+1. Schedule was good, but could have used linking to show the relationship between elements. Schedule seems realistic, glad you show multiple prototypes.
 
 ## Final Design Report
 
@@ -52,9 +52,9 @@ Our final report can be downloaded <a href="{{ site.baseurl }}/assets/" download
 
 Below are the directly quoted feedback points received from the competition judges on our design report.
 
-- Interesting concept. You missed an opportunity for more points on the report by only using 19 pages of the 60 pages permitted. I realize this was the first time the university entered but you had access to past reports. I expected much more discussion in all areas of the report. Your drawing package was mostly complete. You had some items described for the sensor mechanism described in words but not contained in the drawing package. I appreciated your discussion of learning during your prototype construction but normally that is contained in the later phases of design and not in the conceptual design phase.
-- Need to see more about estimates for thrust, performance, etc. and plots of sensitivity studies on Section III. Perhaps a bit more on equations used in Section IV. Section V needs to describe loads, weight and balance, FEA analysis, component design, etc. Section VI should include discussion of construction methods considered and decision process. Bibliography is required.
-- Executive Summary: did not discuss details, but more generalities did not discuss details, but more generalities Management Summary: org chart exist, but no students/members/advisors identified no legend provided. Milestones identified, but no actual dates. Since the timeline is in months intervals, difficult to identify the specific milestone dates. not detailed, ie. Testing only appears to involve flight testing, no structural testing, etc. not detailed, ie. Did not desribe subsystem testing/prototyping versus system. Conceptual Design: summarized, but missing some key requirements, such as 4:1 ratio for the sensor. minimal. Only 2 parameters, speed and easy access, considered and not weighted. none provided. some discussion on potential concepts, but very general. no trade study or weighting provided typo in section III.D.1 made it confusing on whether the design was or was not chosen due to complexity. Section labeled III.D.6 Final Concept did not containany content. Preliminary Design: methodolgy seemed to be based more on prior team's choices and systems performance versus technical analysis for this challenge some details provided based on the SW tools used. provide some performance information, but not necessarily related to the mission. Ie. Estimate of how long the plane will take to fly the 3 laps for mission 2. general description with focus on where to locate within the fuselage and why Detail Design: none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension Drawing Package: includes exploded view and parts list for the winch and pod assemblies includes exploded view and parts list for the winch and pod assemblies. receivers not identified Manufacturing Plan: miminal discussion wrt wing and fuselage material and process selectins. No trade study details, just generic info on availability and cost. No parameters tied to performance (ie. Light weight to gain efficiency in flight duration, etc.) Few details provided. Mostly generalities Test Plan: minimal testing described. Tested prototype in wind tunnel for early learning and brightness of lighting. More testing needs to be defined to ensure craft will be able to support the mission objectives, such as duration and the functionality of the release mechanism Some info provided on the wind tunne test set-up, but no details for future planned testing Performance Results: No results noted No bibliography provided
+1. Interesting concept. You missed an opportunity for more points on the report by only using 19 pages of the 60 pages permitted. I realize this was the first time the university entered but you had access to past reports. I expected much more discussion in all areas of the report. Your drawing package was mostly complete. You had some items described for the sensor mechanism described in words but not contained in the drawing package. I appreciated your discussion of learning during your prototype construction but normally that is contained in the later phases of design and not in the conceptual design phase.
+1. Need to see more about estimates for thrust, performance, etc. and plots of sensitivity studies on Section III. Perhaps a bit more on equations used in Section IV. Section V needs to describe loads, weight and balance, FEA analysis, component design, etc. Section VI should include discussion of construction methods considered and decision process. Bibliography is required.
+1. Executive Summary: did not discuss details, but more generalities did not discuss details, but more generalities Management Summary: org chart exist, but no students/members/advisors identified no legend provided. Milestones identified, but no actual dates. Since the timeline is in months intervals, difficult to identify the specific milestone dates. not detailed, ie. Testing only appears to involve flight testing, no structural testing, etc. not detailed, ie. Did not desribe subsystem testing/prototyping versus system. Conceptual Design: summarized, but missing some key requirements, such as 4:1 ratio for the sensor. minimal. Only 2 parameters, speed and easy access, considered and not weighted. none provided. some discussion on potential concepts, but very general. no trade study or weighting provided typo in section III.D.1 made it confusing on whether the design was or was not chosen due to complexity. Section labeled III.D.6 Final Concept did not containany content. Preliminary Design: methodolgy seemed to be based more on prior team's choices and systems performance versus technical analysis for this challenge some details provided based on the SW tools used. provide some performance information, but not necessarily related to the mission. Ie. Estimate of how long the plane will take to fly the 3 laps for mission 2. general description with focus on where to locate within the fuselage and why Detail Design: none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension none provided, just table of wing, fuselage, propulsion, and controls part number/type.dimension Drawing Package: includes exploded view and parts list for the winch and pod assemblies includes exploded view and parts list for the winch and pod assemblies. receivers not identified Manufacturing Plan: miminal discussion wrt wing and fuselage material and process selectins. No trade study details, just generic info on availability and cost. No parameters tied to performance (ie. Light weight to gain efficiency in flight duration, etc.) Few details provided. Mostly generalities Test Plan: minimal testing described. Tested prototype in wind tunnel for early learning and brightness of lighting. More testing needs to be defined to ensure craft will be able to support the mission objectives, such as duration and the functionality of the release mechanism Some info provided on the wind tunne test set-up, but no details for future planned testing Performance Results: No results noted No bibliography provided
 
 ## Video Submission (in lieu of in person fly-off)
 
