update links, add new content, try for different images

--- a/_posts/2021-04-01-archive2021.md
+++ b/_posts/2021-04-01-archive2021.md
@@ -7,6 +7,8 @@ author: "Judd Mehr"
 
 # Overview
 
+[]("{{ site.baseurl }}/img/../../../img/2021_3view.jpg")
+
 Overall we placed <a href="{{ site.baseurl }}/assets/DBF_Final_Scores_2021.pdf" download>45th of 92</a> teams that participated in the entirety of the competition.
 
 ## Team Makeup
@@ -15,13 +17,13 @@ This year we had a total of 7 members, composed of 4 underclassmen, 2 seniors, a
 
 ## Competition Rules
 
-For reference, the rules for the competition can be download
+For reference, the rules for the competition can be downloaded <a href="{{ site.baseurl }}/assets/dbf-rules-2021.pdf" download>here</a>
 
-## Competition Proposal
+# Competition Proposal
 
-Our submitted proposal can be downloaded <a href="{{ site.baseurl }}/assets/" download>here</a>.  We received an overall score of 68.3 (top score was 92.2), placing us <a href="{{ site.baseurl }}/assets/2021_DBF_Proposal_Scores.pdf" download>59th of 115</a> selected teams.
+Our submitted proposal can be downloaded <a href="{{ site.baseurl }}/assets/2021DBF_Brigham_Young_University_Provo_PROPOSAL.pdf" download>here</a>.  We received an overall score of 68.3 (top score was 92.2), placing us <a href="{{ site.baseurl }}/assets/2021_DBF_Proposal_Scores.pdf" download>59th of 115</a> selected teams.
 
-### Feedback from Judges
+## Feedback from Judges
 
 Below are the directly quoted feedback points received from the competition judges on our proposal.
 
@@ -44,11 +46,11 @@ In master schedule but not referenced (testing)
 1. I liked Table 1. Good job.
 1. Schedule was good, but could have used linking to show the relationship between elements. Schedule seems realistic, glad you show multiple prototypes.
 
-## Final Design Report
+# Final Design Report
 
-Our final report can be downloaded <a href="{{ site.baseurl }}/assets/" download>here</a>.  We received a score of 50.6, the maximum being 93.33.  This placed us at <a href="{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf" download>84th of 93</a>.
+Our final report can be downloaded <a href="{{ site.baseurl }}/assets/2021DBF_BRIGHAM_YOUNG_UNIVERSITY_DESIGN_REPORT.pdf" download>here</a>.  We received a score of 50.6, the maximum being 93.33.  This placed us at <a href="{{ site.baseurl }}/assets/DBF_2021_Report_Scores.pdf" download>84th of 93</a>.
 
-### Feedback from Judges
+## Feedback from Judges
 
 Below are the directly quoted feedback points received from the competition judges on our design report.
 
@@ -58,7 +60,7 @@ Below are the directly quoted feedback points received from the competition judg
 
 ## Video Submission (in lieu of in person fly-off)
 
-Our video submission received a score of 7.97 (top score was 9.83), and can be viewed [here](https://www.youtube.com/watch?v=xcirHwr4ngA)
+Our video submission received a score of 7.97 (top score was 9.83), and can be viewed [here](https://www.youtube.com/watch?v=xcirHwr4ngA){:target="_blank"}
 
 # Takeaways for Next Year
 
