--- a/_posts/2021-04-01-archive2021.md
+++ b/_posts/2021-04-01-archive2021.md
@@ -7,7 +7,7 @@ author: "Judd Mehr"
 
 # Overview
 
-![]("{{ site.baseurl }}/img/2021_3view.jpg")
+![3view]({{ site.baseurl }}/img/2021_3view.jpg)
 
 Overall we placed <a href="{{ site.baseurl }}/assets/DBF_Final_Scores_2021.pdf" download>45th of 92</a> teams that participated in the entirety of the competition.
 
